1. Fixed several math bugs 2. Changed the "sigma" radio buttons on dz_stats.html to a "bandwidth" textbox with default value of 10 3. Added functions get_x_max and get_x_min to kde.py

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
--setup KDE plotter (PDP with set uncertainty) with same functionality as PDP
--find better layout
--abstract code correctly
+Implement tests for DZ stats
+
+PDP deals with sigma & KDE deals with bandwidth
+    Refactor variables appropriately
+
+Force user to input 2 sigma data... or else
+
