--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,6 @@ PDP deals with sigma & KDE deals with bandwidth
 
 Force user to input 2 sigma data... or else
 
+Fix the navbar (disappears instead of getting smaller)
+    change it to have a 3-line thing and a drop-down menu when it gets too small
+    make it just show DZtools and the favicon
