--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 PDP deals with sigma & KDE deals with bandwidth
     Refactor variables appropriately
 
+Either keep filename persistent across sessions or direct the user to pick a file before checking the boxes
