--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,4 @@
-Either keep filename persistent across sessions or direct the user to pick a file before checking the boxes or store whole file for easy re-plotting
+Long term:
+    1. Add users and login
+    2. Add console functionality for dz_stats i.e. "dz_stats -i my_file.xlsx -o graph.svg likeness.xlsx"
+    3. Add Excel spreadsheet editor
