Moved some files around. Also started on DZnmf. Reevaluated goals in todo.txt

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,9 @@
+Short term:
+    1. Complete the html template for DZnmf
+    2. Start the route and application code for DZnmf
+    3. Clean up excel downloading route, and abstract some code
+
 Long term:
     1. Add users and login
     2. Add Excel spreadsheet editor
+    3. Implement another app, maybe DZstats2D or DZmix
