--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,15 @@
-MDS: Make options for R^2, ks, kuiper, likeness, (already have similarity)
 
 Applications:
     In dzMix, implement kuiper and KS tests instead of just r^2. Search for quicker, more optimized functions for r^2, kde generation, and cdf generation.
-    In dzStats, search for more efficient MDS function
+    MDS: Make options for R^2, ks, kuiper, likeness, (already have similarity)
 
 Infrastructure:
     finish matrices classes
     fully implement HTMX to lessen the amount of times the page needs reloaded
 
 New Interface:
-    Word- or Excel-like toolbar with ribbon at the top. Keep it simple.
     Add a section where samples can be uploaded.
         Optional: Loaded samples vs active samples boxes
-    And add a section where a template can be uploaded OR where formats can be chosen.
-        Add a place to download a template of the format options
-        Make templates based on what users want.
 
 Long Term:
-    Add users and login
-    Add Excel spreadsheet editor
-    Add template/code editor
+    Add users and login (maybe google accounts?)
